k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: talki
  labels:
    name: talki
    app: talki-application
